--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,5 +6,9 @@
 <div class="form">
   <input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendMessage()" />
   <button (click)="sendMessage()">Send</button>
+  <button (click)="test()"> test button </button>
+  <button (click)="test2()"> test2 button </button>
+  <button (click)="createRoom('room1')"> create room </button>
+
 </div>
 </body>
