page login without css

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,18 +1,10 @@
 
-<body>
-  <div *ngFor="let message of messages">
-    {{message}}
-  </div>
-  <div>    
-  <!-- <input type="text" [(ngModel)]="username" name="username">
-  <button (click)="saveUsername(username)"> save username </button> -->
-  </div>
-<div class="form">
-  <input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendMessage()" />
-  <button (click)="sendMessage()">Send</button>
-  <button (click)="test()"> test button </button>
-  <button (click)="test2()"> test2 button </button>
-  <button (click)="createRoom('room1')"> create room </button>
-
+<div *ngIf="username; else elseBlock">
+  <app-chat ></app-chat>
+  
 </div>
-</body>
+
+<ng-template #elseBlock>
+  <input #name type="text"  >
+  <button (click)="saveUsername(name.value)"> save username </button>
+</ng-template>
