--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,12 +5,26 @@
 </div>
 
 <ng-template #elseBlock>
-  <input #name type="text"  >
-  <button (click)="saveUsername(name.value)"> save username </button>
+  <div class="login-form">
+    <form >
+      <h2 class="text-center">Join The Chat</h2>       
+      <div class="form-group">
+          <input #name type="text" class="form-control" placeholder="Username" required="required">
+      </div>
+      <div class="form-group">
+          <button (click)="saveUsername(name.value)" class="btn btn-primary btn-block">save your name</button>
+      </div>
+      <div class="clearfix">
+          
+      </div>  
+    </form>      
+</div>
+  <!-- <input #name type="text"  >
+  <button (click)="saveUsername(name.value)"> save username </button> -->
 
-  <ul>
+  <!-- <ul>
     <li *ngFor="let user of users">
       {{user.name}}
     </li>
-  </ul>
+  </ul> -->
 </ng-template>
