--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -33,12 +33,13 @@
     padding: 0;
     font-size: 20px;
     color: #333;
-    text-transform: uppercase; }
+    text-transform: uppercase; 
+}
     .single h3.side-title:after {
     content: '';
-    width: 60px;
+    width: 200px;
     height: 1px;
-    background: #ff173c;
+    background: #0f9def;
     display: block;
     margin-top: 6px; }
     
