interface rooms with bug

--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,17 +1,32 @@
-<div class="chat">
-	<div *ngFor="let message of messages">
-		{{message}}
-	</div>
-	<div>
+<div class = "container">
+	<div class = "row">
+		<div class = "col-sm-3">
+			<app-rooms></app-rooms>
+		</div>
 
-	</div>
-	<div class="form">
-		<input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendMessage()" />
-		<button (click)="sendMessage()">Send</button>
-		<button (click)="joinRoom(roomname.value)"> test button : join room</button>
-		<button (click)="test2()"> test2 button </button>
-		<input #roomname type="text">
-		<button (click)="createRoom(roomname.value)"> create room </button>
+		<div class = "col-sm-6">
+			<div class="messages">
+				<div *ngFor="let message of messages">
+					{{message}}
+				</div>
+				<div>
+			
+				</div>
+				<div class="form">
+					<input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendMessage()" />
+					<button (click)="sendMessage()">Send</button>
+					<!-- <button (click)="joinRoom(roomname.value)"> test button : join room</button>
+					<button (click)="test2()"> test2 button </button>
+					<input #roomname type="text">
+					<button (click)="createRoom(roomname.value)"> create room </button> -->
+			
+				</div>
+			</div>
+		</div>
+		
+		<div class = "col-sm-3">
 
+		</div>
 	</div>
+
 </div>
