--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -21,6 +21,9 @@
     margin-top: 20px;        
     font-size: 15px;
     font-weight: bold;
+    /* background-color: red !important; */
+        
+    /* color: green; */
 }
 .single {
     padding: 30px 15px;
