--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,7 +8,7 @@
     
       <div class="login-form">
         <form >
-          <h2 class="text-center">Join The Chat</h2>       
+          <h2 class="text-center">Join the chat</h2>       
           <div class="form-group">
               <input #name type="text" class="form-control" placeholder="Username" required="required">
           </div>
