--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -47,7 +47,7 @@
 						  name="newMessage"
 						  [(ngModel)]="message"
 						  #input
-						  (keyup)="$event.keyCode == 13 && sendMessage() ;onKey($event)"
+						  (keyup)="$event.keyCode == 13 && sendMessage()"
 						/>
 						<button type="button"  (click)="sendMessage(); input.value=''">
 						 send
