--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -1,11 +1,12 @@
-/* * { margin: 0; padding: 0; box-sizing: border-box; }
+* { margin: 0; padding: 0; box-sizing: border-box; }
 
-.form { background: #000; padding: 3px; width: 60%; }
-.form input { border: 0; padding: 10px; width: 100%; margin-right: .5%; }
-.form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+.form { background: #000; padding: 3px; width: 50vw; }
+.form input { border: 0; padding: 10px; width: 44vw; margin-right: .5%; }
+.form button { width: 5vw; background: rgb(130, 224, 255); border: none; padding: 10px; }
 #messages { list-style-type: none; margin: 0; padding: 0; }
 #messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: rgb(62, 66, 61); } */
+#messages li:nth-child(odd) { background: rgb(62, 66, 61); }
+
 
 
 img {
@@ -22,7 +23,7 @@ img {
 	display: inline-block;
 	padding: 0 0 0 10px;
 	vertical-align: top;
-    width: 92%;
+    width: 55%;
     height: auto;
 }
 
@@ -31,35 +32,35 @@ img {
 	border-radius: 3px;
 	color: #646464;
 	font-size: 14px;
-	margin: 0;
+	margin-left: 5px;
 	padding: 5px 10px 5px 12px;
-	width: 100%;
+	width: 97%;
 }
 
 .mesgs {
 	float: left;
 	padding: 30px 15px 0 25px;
-	width: 60%;
+	width: 55%;
 }
 
 .sent_msg p {
 	background: #05728f none repeat scroll 0 0;
 	border-radius: 3px;
 	font-size: 14px;
-	margin: 0;
+	right: 5px;
 	color: #fff;
 	padding: 5px 10px 5px 12px;
-	width: 100%;
+	width: 97%;
 }
 
 .outgoing_msg {
 	overflow: hidden;
-	margin: 26px 0 26px;
+	/* margin: 26px 0 26px; */
 }
 
 .sent_msg {
 	float: right;
-	width: 46%;
+	width: 55%;
 }
 
 .input_msg_write input {
@@ -97,7 +98,47 @@ img {
 .msg_history {
 	height: 516px;
 	overflow-y: auto;
+	box-shadow:
+	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+	0 12.5px 10px rgba(0, 0, 0, 0.06),
+	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+	0 100px 80px rgba(0, 0, 0, 0.12)
+  ;
+	min-height: 200px;
+	width: 50vw;
+	/* margin: 100px auto; */
+	background: white;
+	border-radius: 5px;
 }
  .message {
 	list-style-type: none;
+
 }
+
+
+
+/* .box {
+	box-shadow:
+	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+	0 12.5px 10px rgba(0, 0, 0, 0.06),
+	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+	0 100px 80px rgba(0, 0, 0, 0.12)
+  ;
+  
+	
+	
+	min-height: 200px;
+	width: 50vw;
+	margin: 100px auto;
+	background: white;
+	border-radius: 5px;
+  } */
+  
+  
+  
+  
+  
