--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -7,7 +7,15 @@
 #messages li { padding: 5px 10px; }
 #messages li:nth-child(odd) { background: rgb(62, 66, 61); }
 
+.container {
+	width: 100%;
+	height: 100%;
+}
 
+.row {
+	width: 100%;
+	height: 100%;
+}
 
 img {
 	max-width: 100%;
@@ -38,9 +46,9 @@ img {
 }
 
 .mesgs {
-	float: left;
-	padding: 30px 15px 0 25px;
-	width: 55%;
+	/* float: left; */
+	/* padding: 30px 15px 0 25px; */
+	/* width: 100%; */
 }
 
 .sent_msg p {
@@ -48,7 +56,7 @@ img {
 	border-radius: 3px;
 	font-size: 14px;
 	right: 5px;
-	color: #fff;
+	color: #f7f7f7;
 	padding: 5px 10px 5px 12px;
 	width: 97%;
 }
@@ -61,6 +69,7 @@ img {
 .sent_msg {
 	float: right;
 	width: 55%;
+	background: #fcfcfc;
 }
 
 .input_msg_write input {
@@ -96,20 +105,24 @@ img {
 }
 
 .msg_history {
-	height: 516px;
+	margin-top: 50px;
+	height: 850px;
 	overflow-y: auto;
-	box-shadow:
+	/* box-shadow:
 	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
 	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
 	0 12.5px 10px rgba(0, 0, 0, 0.06),
 	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
 	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-	0 100px 80px rgba(0, 0, 0, 0.12)
-  ;
+	0 100px 80px rgba(0, 0, 0, 0.12); */
+
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+
 	min-height: 200px;
-	width: 50vw;
+	/* width: 50vw; */
+
 	/* margin: 100px auto; */
-	background: white;
+	background-color: #f7f7f7;
 	border-radius: 5px;
 }
  .message {
