--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,82 +1,54 @@
 <div class="container">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-md-3">
 			<app-rooms>
 
 			</app-rooms>
 		</div>
 
-		<div class = "col-sm-9">
+		<div class="col-md-6">
 			<div class="mesgs">
 				<div class="msg_history">
-				  <li class="message" *ngFor="let message of messages">
-					<div
-					  *ngIf="
+					<li class="message" *ngFor="let message of messages">
+						<div *ngIf="
 						username !== message.username;
 						then incoming_msg;
 						else outgoing_msg
-					  "
-					></div>
-					<ng-template #incoming_msg>
-					  <div class="incoming_msg">
-						<!-- <div class="incoming_msg_img">
-						  <img
-							src="https://i.imgur.com/k2PZLZa.png"
-							alt="User avatar"
-						  />
-						</div> -->
-						<div class="received_msg">
-						  <div class="received_withd_msg">
-							<span>{{message.time }}: {{ message.username}} :</span>
-							<p>{{ message.message }}</p>
-						  </div>
-						</div>
-					  </div>
-					</ng-template>
-					<ng-template #outgoing_msg>
-					  <div class="outgoing_msg">
-						<div class="sent_msg">
-							<span>{{message.time }}: me :</span>
-						  <p>{{ message.message }}</p>
-						</div>
-					  </div>
-					</ng-template>
-				  </li>
+					  "></div>
+						<ng-template #incoming_msg>
+							<div class="incoming_msg">
+								<div class="received_msg">
+									<div class="received_withd_msg">
+										<span>{{message.time }}: {{ message.username}} :</span>
+										<p>{{ message.message }}</p>
+									</div>
+								</div>
+							</div>
+						</ng-template>
+						<ng-template #outgoing_msg>
+							<div class="outgoing_msg">
+								<div class="sent_msg">
+									<span>{{message.time }}: me :</span>
+									<p>{{ message.message }}</p>
+								</div>
+							</div>
+						</ng-template>
+					</li>
 				</div>
 				<div class="form">
-					<form >
-						<input id="input"
-						  type="text"
-						  placeholder="Type a message"
-						  name="newMessage"
-						  [(ngModel)]="message"
-						  #input
-						  (keyup)="$event.keyCode == 13 && sendMessage();"
-						/>
-						<button type="button"  (click)="sendMessage();">
-						 send
+					<form>
+						<input id="input" type="text" placeholder="Type a message" name="newMessage"
+							[(ngModel)]="message" #input (keyup)="$event.keyCode == 13 && sendMessage();" />
+						<button type="button" (click)="sendMessage();">
+							send
 						</button>
 					</form>
-				
-				</div>
-			  </div>
-			<!-- <div class="messages">
-				<div *ngFor="let message of messages">
-					{{message}}
-				</div>
-				<div>
 
 				</div>
-				<div class="form">
-					<input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendMessage()" #value/>
-					<button (click)="sendMessage(); value.value=''">Send</button>
-			
-				</div>
-			</div> -->
+			</div>
 		</div>
 
-		<div class="col-sm-3">
-
+		<div class="col-md-3">
 		</div>
 	</div>
 
