--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  /* background-color: red; */
+}
+
 body {
-	background: #EEF2F7;
-  }
+  background: #212121;
+}
