--- a/client/src/app/rooms/rooms.component.css
+++ b/client/src/app/rooms/rooms.component.css
@@ -39,6 +39,7 @@ li {
     height: 40px;
     display: flex;
     background: #fcfcfc;
+    border: 3px solid #fcfcfc;
 }
 
 p {
@@ -71,7 +72,7 @@ p {
 }
 
 button {
-    margin: 7px 5px 7px 5px;
+    margin: 5px 5px 7px 5px;
     /* background: none; */
     /* color: inherit; */
     /* border: solid #337ab7 1px; */
