--- a/client/src/app/rooms/rooms.component.html
+++ b/client/src/app/rooms/rooms.component.html
@@ -5,8 +5,8 @@
             <li *ngFor="let room of rooms" [class.selected]="room.name === selectedRoom">
                 <p>{{room.name}} </p>
                 <div class="buttons">
-                    <button (click)="roomClick(room.name)"><span class="glyphicon glyphicon-log-in"></span></button>
-                    <button (click)="deleteRoom(room.name)"><span class="glyphicon glyphicon-remove"></span></button>
+                    <button data-toggle="tooltip" data-placement="top" title="Join this channel" (click)="roomClick(room.name)"><span class="glyphicon glyphicon-log-in"></span></button>
+                    <button data-toggle="tooltip" data-placement="top" title="Delete this channel" (click)="deleteRoom(room.name)"><span class="glyphicon glyphicon-remove"></span></button>
                 </div>
             </li>
         </ul>
