--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -46,9 +46,9 @@ img {
 }
 
 .mesgs {
-	/* float: left; */
-	/* padding: 30px 15px 0 25px; */
-	/* width: 100%; */
+	float: left;
+	padding: 30px 15px 0 25px;
+	
 }
 
 .sent_msg p {
@@ -106,17 +106,17 @@ img {
 
 .msg_history {
 	margin-top: 50px;
-	height: 850px;
+	height: 600px;
 	overflow-y: auto;
-	/* box-shadow:
-	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-	0 12.5px 10px rgba(0, 0, 0, 0.06),
-	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-	0 100px 80px rgba(0, 0, 0, 0.12); */
+	box-shadow:
+	0 2.8px 2.2px rgba(255, 255, 255, 0.034),
+	0 6.7px 5.3px rgba(255, 255, 255, 0.048),
+	0 12.5px 10px rgba(255, 255, 255, 0.06),
+	0 22.3px 17.9px rgba(255, 255, 255, 0.072),
+	0 41.8px 33.4px rgba(255, 255, 255, 0.086),
+	0 100px 80px rgba(255, 255, 255, 0.12);
 
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.3);
 
 	min-height: 200px;
 	/* width: 50vw; */
