--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -1,11 +1,67 @@
-* { margin: 0; padding: 0; box-sizing: border-box; }
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
-.form { background: #000; padding: 3px; width: 50vw; }
-.form input { border: 0; padding: 10px; width: 44vw; margin-right: .5%; }
-.form button { width: 5vw; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: rgb(62, 66, 61); }
+.form {
+	/* display: inline-flex; */
+	/* background: #000; */
+	/* padding: 3px; */
+	width: 100%;
+	background-color: white;
+	padding: 0px;
+	margin: 0px;
+	border: 2px solid #303030;
+}
+
+.form input {
+	border: none;
+	
+	display: inline-flex;
+	/* height: auto; */
+	width: 75%;
+	/* border: 0;
+	padding: 10px;
+	width: 44vw;
+	margin-right: .5%; */
+	border-radius: 0 !important;
+	margin: 0px;
+	padding: 0px;
+	/* margin-top: 2px; */
+}
+
+.form button {
+	border-radius: 0 !important;
+	/* display: inline-flex; */
+	width: 25%;
+	height: auto;
+	/* width: 5vw; */
+	/* background: rgb(130, 224, 255); */
+	/* border: none; */
+	margin: 0px;
+	padding: 12px;
+	/* padding-top: 10x; */
+	/* padding: 10px 10px 10px 10px; */
+	text-align: center;
+	align-content: center;
+
+}
+
+
+#messages {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+#messages li {
+	padding: 5px 10px;
+}
+
+#messages li:nth-child(odd) {
+	background: rgb(62, 66, 61);
+}
 
 .container {
 	width: 100%;
@@ -21,7 +77,6 @@ img {
 	max-width: 100%;
 }
 
-
 .incoming_msg_img {
 	display: inline-block;
 	width: 6%;
@@ -31,8 +86,8 @@ img {
 	display: inline-block;
 	padding: 0 0 0 10px;
 	vertical-align: top;
-    width: 55%;
-    height: auto;
+	width: 55%;
+	height: auto;
 }
 
 .received_withd_msg p {
@@ -45,9 +100,24 @@ img {
 	width: 97%;
 }
 
+.msg_history {
+	margin: 0px 2px 0px 2px;
+	/* margin-top: 50px; */
+	height: 850px;
+	overflow-y: scroll;
+	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+	min-height: 200px;
+	/* width: 50vw; */
+	/* margin: 100px auto; */
+	background-color: #f7f7f7;
+	/* border-radius: 5px; */
+}
+
 .mesgs {
+	background: #303030;
 	/* float: left; */
-	/* padding: 30px 15px 0 25px; */
+	margin: 20px 20px 20px 20px;
+	padding: 30px 30px 30px 30px;
 	/* width: 100%; */
 }
 
@@ -63,6 +133,7 @@ img {
 
 .outgoing_msg {
 	overflow: hidden;
+	margin-bottom: 10px 0px 10px 0px;
 	/* margin: 26px 0 26px; */
 }
 
@@ -104,54 +175,6 @@ img {
 	padding: 0 0 50px 0;
 }
 
-.msg_history {
-	margin-top: 50px;
-	height: 850px;
-	overflow-y: auto;
-	/* box-shadow:
-	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-	0 12.5px 10px rgba(0, 0, 0, 0.06),
-	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-	0 100px 80px rgba(0, 0, 0, 0.12); */
-
-	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-
-	min-height: 200px;
-	/* width: 50vw; */
-
-	/* margin: 100px auto; */
-	background-color: #f7f7f7;
-	border-radius: 5px;
-}
- .message {
+.message {
 	list-style-type: none;
-
 }
-
-
-
-/* .box {
-	box-shadow:
-	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-	0 12.5px 10px rgba(0, 0, 0, 0.06),
-	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-	0 100px 80px rgba(0, 0, 0, 0.12)
-  ;
-  
-	
-	
-	min-height: 200px;
-	width: 50vw;
-	margin: 100px auto;
-	background: white;
-	border-radius: 5px;
-  } */
-  
-  
-  
-  
-  
