--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -12,6 +12,7 @@ h3 {
     width: 500px;
     height: 500px;
     margin: 120px auto;
+    margin-top: 50px;
 }
 
 .login-form form {
@@ -84,4 +85,8 @@ h3 {
 
 .single li:last-child a {
     border-bottom: 0;
+}
+
+.roomName {
+    margin: 0px;
 }
