--- a/client/src/app/rooms/rooms.component.html
+++ b/client/src/app/rooms/rooms.component.html
@@ -6,8 +6,8 @@
                 <p>{{room.name}} </p>
                 <div class="buttons">
                     
-                    <button data-toggle="tooltip" data-placement="top" title="change this name" (click)="modifyRoom(room.name)"><span class="glyphicon glyphicon-pencil"></span></button>
                     <button data-toggle="tooltip" data-placement="top" title="Join this channel" (click)="roomClick(room.name)"><span class="glyphicon glyphicon-log-in"></span></button>
+                    <button data-toggle="tooltip" data-placement="top" title="Rename the channel" (click)="modifyRoom(room.name)"><span class="glyphicon glyphicon-pencil"></span></button>
                     <button data-toggle="tooltip" data-placement="top" title="Delete this channel" (click)="deleteRoom(room.name)"><span class="glyphicon glyphicon-remove"></span></button>
                 </div>
             </li>
